<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/distance_small"
    tools:context=".ui.MainActivity"
    android:orientation="vertical">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/basicDataCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/distance_small"
        android:padding="@dimen/distance_small"
        card_view:cardCornerRadius="4dp">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/distance_small"
            android:orientation="vertical"
            android:padding="@dimen/distance_small">

            <TextView
                android:id="@+id/canteenNameTextHeadlineView"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/label_canteen" />

            <TextView
                android:id="@+id/canteenNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/misc_is_beeind_loaded" />

            <TextView
                android:id="@+id/canteenInfoTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="false"
                android:text="" />
            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/baseDataButton"
                android:text="@string/button_edit" />
        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/mealOfDayCardView"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/distance_small"
                android:padding="@dimen/distance_small"
                card_view:cardCornerRadius="4dp">
                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_margin="@dimen/distance_small"
                    android:orientation="vertical"
                    android:padding="@dimen/distance_small"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/mealOfTheDayHeadlineTextView"
                        style="@style/TextAppearance.AppCompat.Headline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@string/label_current_meal_of_the_day"/>
                    <TextView
                        android:id="@+id/mealOfDayTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@string/misc_is_beeind_loaded"/>
                    <Button
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/mealOfTheDayButton"
                        android:text="@string/button_edit" />
                </android.support.v7.widget.LinearLayoutCompat>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/ratingsCardView"
                android:layout_gravity=""
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/distance_small"
                android:padding="@dimen/distance_small"
                card_view:cardCornerRadius="4dp">
                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_margin="@dimen/distance_small"
                    android:orientation="vertical"
                    android:padding="@dimen/distance_small"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/ratingsHeadlineTextView"
                        style="@style/TextAppearance.AppCompat.Headline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@string/label_ratings"/>
                    <TextView
                        android:id="@+id/ratingsTextView"
                        style="@style/TextAppearance.AppCompat.Body1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@string/misc_is_beeind_loaded"/>
                    <TextView
                        android:id="@+id/ratingsAverageTextView"
                        style="@style/TextAppearance.AppCompat.Body1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text=""/>

                    <Button
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/ratingButton"
                        android:text="@string/button_edit" />
                </android.support.v7.widget.LinearLayoutCompat>

            </android.support.v7.widget.CardView>

</LinearLayout>